--- a/index.html
+++ b/index.html
@@ -1,4 +1,36 @@
 ---
-layout: default
+layout: home
 ---
 
+<div class="home">
+
+{% include about-us.html %}
+
+{% include services.html %}
+
+<div class="background-dark roomy-row">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="lead text-center text-light">
+                    What our clients say about us
+                </p>
+                {% include carousel.html %}
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="background-light roomy-row">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <p class="lead text-center">
+                    Who we've worked with
+                </p>
+                {% include clients.html %}
+            </div>
+        </div>
+    </div>
+</div>
+</div>
