--- a/christmas/index.html
+++ b/christmas/index.html
@@ -20,7 +20,7 @@ title: 12 days of Mantra
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-3/" class="list-group-item list-group-item-danger disabled">
                 <p class="h1">Day<br>3</p>
             </a>
         </div>
@@ -30,21 +30,21 @@ title: 12 days of Mantra
 <div class="row">
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-4/" class="list-group-item list-group-item-success disabled">
                 <p class="h1">Day<br>4</p>
             </a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-5/" class="list-group-item list-group-item-danger disabled">
                 <p class="h1">Day<br>5</p>
             </a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-6/" class="list-group-item list-group-item-success disabled">
                 <p class="h1">Day<br>6</p>
             </a>
         </div>
@@ -54,21 +54,21 @@ title: 12 days of Mantra
 <div class="row">
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-7/" class="list-group-item list-group-item-danger disabled">
                 <p class="h1">Day<br>7</p>
             </a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-8/" class="list-group-item list-group-item-success disabled">
                 <p class="h1">Day<br>8</p>
             </a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-9/" class="list-group-item list-group-item-danger disabled">
                 <p class="h1">Day<br>9</p>
             </a>
         </div>
@@ -78,21 +78,21 @@ title: 12 days of Mantra
 <div class="row">
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-10/" class="list-group-item list-group-item-success disabled">
                 <p class="h1">Day<br>10</p>
             </a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-11/" class="list-group-item list-group-item-danger disabled">
                 <p class="h1">Day<br>11</p>
             </a>
         </div>
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="#" class="list-group-item disabled">
+            <a href="/christmas/day-12/" class="list-group-item list-group-item-success disabled">
                 <p class="h1">Day<br>12</p>
             </a>
         </div>
