--- a/christmas/index.html
+++ b/christmas/index.html
@@ -1,7 +1,9 @@
 ---
 layout: page
 title: 12 days of Mantra
+published: true
 ---
+
 
 <div class="row">
     <div class="col-sm-4">
@@ -20,7 +22,7 @@ title: 12 days of Mantra
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="/christmas/day-3/" class="list-group-item list-group-item-danger disabled">
+            <a href="/christmas/day-3/" class="list-group-item list-group-item-danger">
                 <p class="h1">Day<br>3</p>
             </a>
         </div>
