--- a/christmas/index.html
+++ b/christmas/index.html
@@ -57,7 +57,7 @@ published: true
 <div class="row">
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="/christmas/day-7/" class="list-group-item list-group-item-danger disabled">
+            <a href="/christmas/day-7/" class="list-group-item list-group-item-danger">
                 <p class="h1">Day<br>7</p>
             </a>
         </div>
