--- a/christmas/index.html
+++ b/christmas/index.html
@@ -64,7 +64,7 @@ published: true
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="/christmas/day-8/" class="list-group-item list-group-item-success disabled">
+            <a href="/christmas/day-8/" class="list-group-item list-group-item-success">
                 <p class="h1">Day<br>8</p>
             </a>
         </div>
