--- a/christmas/index.html
+++ b/christmas/index.html
@@ -71,7 +71,7 @@ published: true
     </div>
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="/christmas/day-9/" class="list-group-item list-group-item-danger disabled">
+            <a href="/christmas/day-9/" class="list-group-item list-group-item-danger">
                 <p class="h1">Day<br>9</p>
             </a>
         </div>
