--- a/christmas/index.html
+++ b/christmas/index.html
@@ -81,7 +81,7 @@ published: true
 <div class="row">
     <div class="col-sm-4">
         <div class="list-group text-center">
-            <a href="/christmas/day-10/" class="list-group-item list-group-item-success disabled">
+            <a href="/christmas/day-10/" class="list-group-item list-group-item-success">
                 <p class="h1">Day<br>10</p>
             </a>
         </div>
