--- a/christmas/day-11/index.html
+++ b/christmas/day-11/index.html
@@ -3,4 +3,4 @@ layout: page
 title: Eleventh day of Mantra
 ---
 
-<img src="{{ site.url }}/img/christmas/mantra-day-11.png" class="img-responsive" alt="Twelve days of Mantra 11th December.">
+<img src="{{ site.url }}/img/christmas/mantra-day-11.jpg" class="img-responsive" alt="Twelve days of Mantra 11th December.">
