--- a/fee-calculator/index.html
+++ b/fee-calculator/index.html
@@ -206,9 +206,9 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-  <script src="./serializejson.js"></script>
-  <script src="./calculate.js"></script>
-  <script src="./app.js"></script>
+  <script src="./serializejson.js?v0.1"></script>
+  <script src="./calculate.js?v0.1"></script>
+  <script src="./app.js?v0.1"></script>
 
 </body>
 
