Display changes, don't fix percentages

--- a/fee-calculator/index.html
+++ b/fee-calculator/index.html
@@ -24,7 +24,7 @@
   <div class="container-fluid py-3">
     <div class="row">
       <div class="col">
-        <h1 class="h3">Redbrik Move 10,000</h1>
+        <h1 class="h3">Redbrik Move 10,000<br>Fee Calculator</h1>
         <hr>
       </div>
     </div>
@@ -121,7 +121,7 @@
                 </tr>
                 <tr>
                   <th scope="row">Discounted fee:</th>
-                  <td class="text-right font-weight-bold"><span data-output="discount"></span>%</td>
+                  <td class="text-right font-weight-bold">£<span data-output="balanceAfterDiscount"></span></td>
                 </tr>
                 <tr class="border-top border-bottom">
                   <th scope="row">Discount (inc. VAT):</th>
