Discount changes and new option

--- a/fee-calculator/index.html
+++ b/fee-calculator/index.html
@@ -85,6 +85,12 @@
                 Mortgage
               </label>
             </div>
+            <div class="custom-control custom-checkbox">
+              <input class="custom-control-input" name="legalExtras[4]" type="checkbox" id="epc" value="epc">
+              <label class="custom-control-label" for="epc">
+                EPC
+              </label>
+            </div>
           </div>
 
           <button class="btn btn-lg btn-primary btn-block" type="submit">Calculate</button>
